added nav with an ul list

--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,18 @@
   <body>
     <div class="main">
       <div class="box">
-        <div class="logo navbar-item">
-          <i class="fa-solid fa-bomb navbar-item"></i>
-        </div>
-        <div class="field has-addons navbar-item">
+        <nav class="navbar">
+          <ul class="navbar-item">
+              <li>
+                <div class="logo navbar-item">
+                  <i class="fa-solid fa-bomb navbar-item"></i>
+                </div>
+              </li>
+              <li>
+                <div class="field has-addons navbar-item">
+              </li>
+          </ul>
+        </nav>
           <p class="control">
             <input
               class="input is-medium is-rounded"
